fix footer alignment

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -54,6 +54,7 @@ footer {
     }
     .social {
         display: flex;
+        align-items: center;
         a {
             width: 100%;
             display: flex;
